--- a/listing-page.html
+++ b/listing-page.html
@@ -145,9 +145,15 @@
 
     <!-- Main Content -->
     <main id="main" class="main">
-        <div class="flex-1 flex bg-white">
+        <div class="flex-1 flex bg-white flex-col lg:flex-row">
             <!-- Sidebar Filters -->
-            <aside id="filters-sidebar" class="w-[280px] p-4 border-r border-transparent text-sm flex-shrink-0">
+            <aside id="filters-sidebar" class="fixed lg:static top-0 left-0 h-full lg:h-auto  w-[280px] bg-white p-4 border-r text-sm z-50 lg:z-0 transform -translate-x-full lg:translate-x-0
+         transition-transform duration-300 ease-in-out">
+                <!-- Mobile Header -->
+                <div class="flex items-center justify-between mb-4 lg:hidden">
+                    <h2 class="font-bold text-base">Filters</h2>
+                    <button id="closeFilters" class="text-xl leading-none">&times;</button>
+                </div>
 
                 <!-- Result Count -->
                 <div class="mb-4">
@@ -303,20 +309,24 @@
                 </div>
             </aside>
             <!-- Product Listings -->
-            <section id="product-list" class="flex-1 p-4 pl-0">
+            <button id="openFilters"
+                class="lg:hidden mb-4 px-8 py-4 border rounded text-sm font-medium flex items-center gap-2">
+                ☰ Filters
+            </button>
+            <section id="product-list" class="flex-1 p-8">
 
                 <!-- Results Header -->
-                <div class="mb-4 border-b border-gray-200 pb-2">
+                <div class="mb-8 border-b border-gray-200 pb-8">
                     <h1 class="font-bold text-xl">Results</h1>
                     <p class="text-sm text-gray-600">Check each product page for other buying options.</p>
                 </div>
 
                 <!-- Product Card 1 -->
-                <div id="product-card-1"
-                    class="flex border border-gray-200 rounded-sm mb-0 hover:bg-gray-50 transition-colors p-4 relative">
+                <div id="product-card-1" class="flex flex-col sm:flex-row border-b border-gray-200
+            mb-6 pb-6 sm:mb-8 sm:pb-8 relative">
                     <!-- Image -->
-                    <div
-                        class="w-[240px] flex-shrink-0 flex items-center justify-center bg-[#F7F7F7] p-2 rounded mr-4 h-[220px]">
+                    <div class="w-full sm:w-[180px] lg:w-[220px] h-[200px] sm:h-[180px] lg:h-[220px] flex-shrink-0 flex items-center justify-center  bg-[#F7F7F7] rounded
+         mb-4 sm:mb-0 sm:mr-6 lg:mr-10">
                         <img class="w-full h-full object-contain mix-blend-multiply"
                             src="https://storage.googleapis.com/uxpilot-auth.appspot.com/default-placeholder.png"
                             alt="silver smartphone front and back view with waterdrop screen high quality product shot" />
@@ -334,12 +344,32 @@
 
                         <!-- Rating -->
                         <div class="flex items-center gap-2 mb-1">
-                            <div class="flex text-[#FFA41C] text-sm">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-regular fa-star-half-stroke"></i>
+                            <div class="flex items-center">
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#half-star"></use>
+                                    </svg>
+                                </i>
                             </div>
                             <a href="#"
                                 class="text-[#007185] hover:text-[#C7511F] hover:underline text-sm font-medium">4.3</a>
@@ -367,15 +397,15 @@
 
                 <!-- Product Card 2 (Best Seller) -->
                 <div id="product-card-2"
-                    class="flex border-t border-gray-200 mt-2 pt-4 mb-0 hover:bg-gray-50 transition-colors p-4 relative">
+                    class="flex flex-col sm:flex-row border-b border-gray-200  mb-6 pb-6 sm:mb-8 sm:pb-8 relative">
                     <!-- Best Seller Badge -->
                     <div
-                        class="absolute top-4 left-0 bg-[#C45500] text-white text-xs font-bold px-2 py-1 rounded-r-sm z-10 shadow-sm">
+                        class="absolute top-4 left-0 bg-[#C45500] text-white text-xs font-bold px-2 py-1 rounded-r-sm z-1 shadow-sm">
                         Best Seller</div>
 
                     <!-- Image -->
-                    <div
-                        class="w-[240px] flex-shrink-0 flex items-center justify-center bg-[#F7F7F7] p-2 rounded mr-4 h-[220px]">
+                    <div class="w-full sm:w-[180px] lg:w-[220px] h-[200px] sm:h-[180px] lg:h-[220px] flex-shrink-0 flex items-center justify-center  bg-[#F7F7F7] rounded
+         mb-4 sm:mb-0 sm:mr-6 lg:mr-10">
                         <img class="w-full h-full object-contain mix-blend-multiply"
                             src="https://storage.googleapis.com/uxpilot-auth.appspot.com/default-placeholder.png"
                             alt="generation timeout" />
@@ -392,12 +422,32 @@
 
                         <!-- Rating -->
                         <div class="flex items-center gap-2 mb-1">
-                            <div class="flex text-[#FFA41C] text-sm">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
+                            <div class="flex items-center">
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#half-star"></use>
+                                    </svg>
+                                </i>
                             </div>
                             <a href="#"
                                 class="text-[#007185] hover:text-[#C7511F] hover:underline text-sm font-medium">4.5</a>
@@ -436,11 +486,11 @@
                 </div>
 
                 <!-- Product Card 3 -->
-                <div id="product-card-3"
-                    class="flex border-t border-gray-200 mt-2 pt-4 mb-0 hover:bg-gray-50 transition-colors p-4 relative">
+                <div id="product-card-3" class="flex flex-col sm:flex-row border-b border-gray-200
+            mb-6 pb-6 sm:mb-8 sm:pb-8 relative">
                     <!-- Image -->
-                    <div
-                        class="w-[240px] flex-shrink-0 flex items-center justify-center bg-[#F7F7F7] p-2 rounded mr-4 h-[220px]">
+                    <div class="w-full sm:w-[180px] lg:w-[220px] h-[200px] sm:h-[180px] lg:h-[220px] flex-shrink-0 flex items-center justify-center  bg-[#F7F7F7] rounded
+         mb-4 sm:mb-0 sm:mr-6 lg:mr-10">
                         <img class="w-full h-full object-contain mix-blend-multiply"
                             src="https://storage.googleapis.com/uxpilot-auth.appspot.com/default-placeholder.png"
                             alt="timeout" />
@@ -457,12 +507,32 @@
 
                         <!-- Rating -->
                         <div class="flex items-center gap-2 mb-1">
-                            <div class="flex text-[#FFA41C] text-sm">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star-half-stroke"></i>
+                            <div class="flex items-center">
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#half-star"></use>
+                                    </svg>
+                                </i>
                             </div>
                             <a href="#"
                                 class="text-[#007185] hover:text-[#C7511F] hover:underline text-sm font-medium">4.5</a>
@@ -493,11 +563,11 @@
                 </div>
 
                 <!-- Product Card 4 -->
-                <div id="product-card-4"
-                    class="flex border-t border-gray-200 mt-2 pt-4 mb-0 hover:bg-gray-50 transition-colors p-4 relative">
+                <div id="product-card-4" class="flex flex-col sm:flex-row border-b border-gray-200
+            mb-6 pb-6 sm:mb-8 sm:pb-8 relative">
                     <!-- Image -->
-                    <div
-                        class="w-[240px] flex-shrink-0 flex items-center justify-center bg-[#F7F7F7] p-2 rounded mr-4 h-[220px]">
+                    <div class="w-full sm:w-[180px] lg:w-[220px] h-[200px] sm:h-[180px] lg:h-[220px] flex-shrink-0 flex items-center justify-center  bg-[#F7F7F7] rounded
+         mb-4 sm:mb-0 sm:mr-6 lg:mr-10">
                         <img class="w-full h-full object-contain mix-blend-multiply"
                             src="https://storage.googleapis.com/uxpilot-auth.appspot.com/default-placeholder.png"
                             alt="timeout" />
@@ -515,12 +585,32 @@
 
                         <!-- Rating -->
                         <div class="flex items-center gap-2 mb-1">
-                            <div class="flex text-[#FFA41C] text-sm">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
+                            <div class="flex items-center">
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#fill-star"></use>
+                                    </svg>
+                                </i>
+                                <i class="text-[#f08804] svg-icon svg-icon--xs">
+                                    <svg class="svg" width="18" height="18">
+                                        <use xlink:href="assets/images/retina/sprite.svg#half-star"></use>
+                                    </svg>
+                                </i>
                             </div>
                             <a href="#"
                                 class="text-[#007185] hover:text-[#C7511F] hover:underline text-sm font-medium">4.1</a>
@@ -707,7 +797,28 @@
             </div>
         </div>
     </footer>
-
+    <div id="filterOverlay" class="fixed inset-0 bg-black/50 z-40 hidden lg:hidden"></div>
 </body>
+<script>
+    const openBtn = document.getElementById('openFilters');
+    const closeBtn = document.getElementById('closeFilters');
+    const sidebar = document.getElementById('filters-sidebar');
+    const overlay = document.getElementById('filterOverlay');
+
+    openBtn?.addEventListener('click', () => {
+        sidebar.classList.remove('-translate-x-full');
+        overlay.classList.remove('hidden');
+        document.body.classList.add('overflow-hidden');
+    });
+
+    function closeSidebar() {
+        sidebar.classList.add('-translate-x-full');
+        overlay.classList.add('hidden');
+        document.body.classList.remove('overflow-hidden');
+    }
+
+    closeBtn?.addEventListener('click', closeSidebar);
+    overlay?.addEventListener('click', closeSidebar);
+</script>
 
 </html>
